fix: corrige tipo do campo lat de Double para BigDecimal Schema validation do Hibernate falhava no Render/Aiven porque a coluna lat no banco e DECIMAL(12,6) mas a entidade declarava Double (mapeado como float pelo Hibernate). - CandidatoEntity: lat Double -> BigDecimal - CandidatoMatchDTO: lat Double -> BigDecimal, lon mantido como String - MatchingServiceUnitTest: literais double -> new BigDecimal(...) - MatchingJavaPythonParityExportTest: idem 28 testes passando.